# Spot

attraction_description/: package.xml  setup.cfg  setup.py
attraction_description/config/: spot.rviz
attraction_description/launch/: display.launch.py
attraction_description/scripts/: home_state.py
attraction_description/urdf/: accessories.urdf.xacro  spot.urdf.xacro  spot_arm.urdf.xacro
custom_interfaces/: CMakeLists.txt  package.xml
custom_interfaces/msg/: Test.msg
custom_interfaces/srv/: TaskTest.srv
motion_planner/: CMakeLists.txt  package.xml
motion_planner/include/com/: com_solver.hpp
motion_planner/include/environment/: Environment_1.hpp
motion_planner/include/kinematics/: arm_kinematics.hpp  kinematics.hpp
motion_planner/include/kinematics2/: kinematics2.hpp
motion_planner/include/maths/: commonmathssolver.hpp  curves.hpp
motion_planner/include/miscellaneous/: conversion.hpp
motion_planner/include/motion_planner/: arm_motion_planner.hpp  gaits2.hpp  gaits_v2.hpp  gaits_v3.hpp  leg_motion_planning.hpp  posture.hpp  posture_v2.hpp
motion_planner/include/otg_cpp/: OTG.tpp  OWLOTG.tpp  Profile10.tpp  Profile11.tpp  Profile12.tpp  Profile13.tpp  Profile14.tpp  Profile15.tpp  Profile16.tpp  Profile9.tpp  VariantBProfiles.tpp  otg.h
motion_planner/include/rviz2/: markers.hpp
motion_planner/src/com/: com_solver.cpp
motion_planner/src/environment/: EnvironmentSetup.cpp  Environment_1.cpp
motion_planner/src/kinematics/: arm_kinematics.cpp  kinematics.cpp
motion_planner/src/main/: Test_Client.cpp  Test_Server.cpp
motion_planner/src/maths/: commonmathssolver.cpp  curves.cpp
motion_planner/src/motion_planner/: arm_motion_planner.cpp
motion_planner/src/rviz2/: markers.cpp
